--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/main.scss">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 </head>
 
 <body>
@@ -16,7 +17,7 @@
         <div class="container">
             <img class="hero__logo" src="images/ebac_logo.svg" alt="EBAC">
             <p class="hero__text">
-                O maior evento de tecnologia do Brasil começa em 10d 12h 20m 15s
+                O maior evento de tecnologia do Brasil começa em <span id="contador"></span>
             </p>
 
             <div class="infos-bar">
@@ -40,8 +41,56 @@
         </div>
     </header>
 
+    <section class="event event--front-end">
+        <div class="container" data-aos="fade-right">
+            <div class="event__details">
+                <h2 class="event__details__title">Front-end</h2>
+                <p class="event__details__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime
+                    inventore saepe ipsum eius odit
+                    harum, officiis pariatur voluptates! Assumenda exercitationem reiciendis velit eos eveniet.</p>
+            </div>
+            <img class="event__image" src="images/frontend.png" alt="Front-end">
+        </div>
+    </section>
+
+    <section class="event event--ux-ui">
+        <div class="container container__reverse" data-aos="fade-left">
+            <div class="event__details">
+                <h2 class="event__details__title">UI e UX</h2>
+                <p class="event__details__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime
+                    inventore saepe ipsum eius odit
+                    harum, officiis pariatur voluptates! Assumenda exercitationem reiciendis velit eos eveniet.</p>
+            </div>
+            <img class="event__image" src="images/ui-ux.png" alt="UI e UX">
+        </div>
+    </section>
+
+    <section class="event event--data-science">
+        <div class="container"  data-aos="fade-right">
+            <div class="event__details">
+                <h2 class="event__details__title">Data Science</h2>
+                <p class="event__details__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime
+                    inventore saepe ipsum eius odit
+                    harum, officiis pariatur voluptates! Assumenda exercitationem reiciendis velit eos eveniet.</p>
+            </div>
+            <img class="event__image" src="images/data.png" alt="Data Science">
+        </div>
+    </section>
+
+    <section class="event event--back-end">
+        <div class="container container__reverse" data-aos="fade-left">
+            <div class="event__details">
+                <h2 class="event__details__title">Back-end</h2>
+                <p class="event__details__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime
+                    inventore saepe ipsum eius odit
+                    harum, officiis pariatur voluptates! Assumenda exercitationem reiciendis velit eos eveniet.</p>
+            </div>
+            <img class="event__image" src="images/backend.png" alt="Back-end">
+        </div>
+    </section>
 
 
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script src="scripts/main.js"></script>
 </body>
 
